--- a/index.html
+++ b/index.html
@@ -9,9 +9,28 @@
         <link rel="stylesheet" href="css/styles.css">
     </head>
 <body>
-    nav.navbar.navbar-default>.container-fluid>.navbar-header>button[type="button"].navbar-toggle.collapsed[data-toggle="collapse"][data-target="#mainNavbar"]span.icon-bar
-
-
+<!-- START OF NAVBAR -->
+   <nav class="navbar navbar-default">
+       <div class="container-fluid">
+           <div class="navbar-header">
+               <button type="button" class="navbar-toggle collapsed">
+                   <span class="sr-only">Toggle Navagation</span>
+                   <span class="icon-bar"></span>
+                   <span class="icon-bar"></span>
+                   <span class="icon-bar"></span>
+               </button><a href="#" class="navbar-header"><img src="img/logo.png" alt="logo"></a>
+           </div>
+           <div class="collapse navbar-collapse" id="mainNavbar">
+               <ul class="nav navbar-nav navbar-right">
+                    <li class="active"><a href="#">Home<span class="sr-only"></span>(current)</a></li>
+                   <li><a href="#testimonials">Testimonials</a></li>
+                   <li><a href="#about"></a>About</li>
+                   <li><a href="#contact">Contact</a></li>
+               </ul>
+           </div>
+       </div>
+   </nav>
+<!-- END OF NAVBAR -->
 
 
 
