finished adding images just need one more

--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
                     <div class="row">
                         <div class="col-md-12">
                             <div class="row">
-                                <div class="col-md-8 col-md-offset-2"><img src="img/" alt="picture of terry" class="img-responsive center-block img-thumbnail"></div>
+                                <div class="col-md-8 col-md-offset-2"><img id="size" src="img/terry.jfif" alt="picture of terry" class="img-responsive center-block img-thumbnail"></div>
                             </div>
                             <div class="row">
                                 <div class="col-md-12">
@@ -122,7 +122,7 @@
                     <div class="row">
                         <div class="col-md-12">
                             <div class="row">
-                                <div class="col-md-8 col-md-offset-2"><img src="" alt="picture of miles" class="img-responsive center-block img-thumbnail"></div>
+                                <div class="col-md-8 col-md-offset-2"><img src="img/miles.jpg" alt="picture of miles" class="img-responsive center-block img-thumbnail"></div>
                             </div>
                             <div class="row">
                                 <div class="col-md-12">
@@ -137,7 +137,7 @@
                     <div class="row">
                         <div class="col-md-12">
                             <div class="row">
-                                <div class="col-md-8 col-md-offset-2"><img src="" alt="picture of jayson" class="img-responsive center-block img-thumbnail"></div>
+                                <div class="col-md-8 col-md-offset-2"><img src="img/jayson.jpg" alt="picture of jayson" class="img-responsive center-block img-thumbnail"></div>
                             </div>
                             <div class="row">
                                 <div class="col-md-12">
@@ -152,7 +152,7 @@
                     <div class="row">
                         <div class="col-md-12">
                             <div class="row">
-                                <div class="col-md-8 col-md-offset-2"><img src="img/alex.jpg" alt="picture of alex" class="img-responsive center-block img-thumbnail"></div>
+                                <div class="col-md-8 col-md-offset-2"><img id="size" src="img/alex.jpg" alt="picture of alex" class="img-responsive center-block img-thumbnail alex"></div>
                             </div>
                             <div class="row">
                                 <div class="col-md-12">
@@ -169,7 +169,7 @@
                     <div class="row">
                         <div class="col-md-12">
                             <div class="row">
-                                <div class="col-md-8 col-md-offset-2"><img src="" alt="" class="img-responsive center-block img-thumbnail"></div>
+                                <div  class="col-md-8 col-md-offset-2"><img id="size"src="img/jacque.jfif" alt="picture of jacque" class="img-responsive center-block img-thumbnail"></div>
                             </div>
                             <div class="row">
                                 <div class="col-md-12">
@@ -231,7 +231,7 @@
                         <div class="row">
                             <div class="col-md-12">
                                 <div class="row">
-                                    <div class="col-md-8 col-md-offset-2"><img src="" alt="picture of troy" class="img-responsive center-block img-thumbnail"></div>
+                                    <div class="col-md-8 col-md-offset-2"><img id="size" src="img/troy.jpg" alt="picture of troy" class="img-responsive center-block img-thumbnail"></div>
                                 </div>
                                 <div class="row">
                                     <div class="col-md-12">
@@ -246,7 +246,7 @@
                         <div class="row">
                             <div class="col-md-12">
                                 <div class="row">
-                                    <div class="col-md-8 col-md-offset-2"><img src="img/" alt="picture of aaron" class="img-responsive center-block img-thumbnail"></div>
+                                    <div class="col-md-8 col-md-offset-2"><img id="size"src="img/aaron.jpg" alt="picture of aaron" class="img-responsive center-block img-thumbnail"></div>
                                 </div>
                                 <div class="row">
                                     <div class="col-md-12">
@@ -261,7 +261,7 @@
                         <div class="row">
                             <div class="col-md-12">
                                 <div class="row">
-                                    <div class="col-md-8 col-md-offset-2"><img src="img/" alt="picture of josue" class="img-responsive center-block img-thumbnail"></div>
+                                    <div class="col-md-8 col-md-offset-2"><img src="img/jose.jpg" alt="picture of josue" class="img-responsive center-block img-thumbnail"></div>
                                 </div>
                                 <div class="row">
                                     <div class="col-md-12">
