--- a/index.html
+++ b/index.html
@@ -162,7 +162,7 @@
                             <div class="row">
                                 <div class="col-md-12">
                                     <h1 class="hi">Alex</h1>
-                                    <p>Alex is from another world, not only his he a super nice guy he also very funny. he took me alongside him on his tours and gave me the knowledge to not only give people my personal story but to have it relate to people. not just that but he helped me grow my knowledge on how to give a perfect tour for any age.</p>
+                                    <p>Alex is from another world, not only is he a super nice guy he is also very funny. He took me alongside him on his tours and gave me the knowledge to not only give people my personal story but to have it relate to people. Not just that but he helped me grow my knowledge on how to give a perfect tour for any age.</p>
                                 </div>
                             </div>
                         </div>
