fixed links to projects

--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
                     <h1>Restaurante</h1>
                     <p>The Final project for Moblie Friendly</p>
                     <img class="img-responsive center-block main_logo" src="img/logo-01.png" alt="carousel logo">
-                    <a href="git@github.com:isaiahcruz70/mfw-restaurante.git" class="btn btn-lg btn-primary" role="button">Learn More</a>
+                    <a href="https://isaiahcruz70.github.io/mfw-restaurante/" class="btn btn-lg btn-primary" role="button">Learn More</a>
                 </div>
             </div>
             <div class="item main_img3">
@@ -66,11 +66,10 @@
                     <h1>Pet Shop</h1>
                     <p>First Practice project for Mobile Friendly</p>
                     <img class="img-responsive center-block main_logo" src="img/petstore_logo.png" alt="carousel logo">
-                    <a href="https://github.com/isaiahcruz70/mfw-pet-store" class="btn btn-lg btn-primary" role="button">Learn More</a>
+                    <a href="https://isaiahcruz70.github.io/mfw-pet-store/" class="btn btn-lg btn-primary" role="button">Learn More</a>
                 </div>
             </div>
         </div>
-      
         <!-- Controls -->
         <a class="left carousel-control" href="#carousel-example-generic" role="button" data-slide="prev">
           <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
@@ -405,6 +404,7 @@
         </footer>
         <!-- END OF FOOTER -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
-	<script src="js/bootstrap.min.js"></script>
+    <script src="js/bootstrap.min.js"></script>
+    <script src="js/main.js"></script>
 </body>
 </html>
